Remove duplication Angle Monitoring and Voltage Monitoring
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>